# brick-table

./: .gitignore  README.md  brick-spreadsheet.cabal  brick-table.cabal
example/: Main.hs
src/Brick/Extras/: Spreadsheet.hs  Table.hs
