name:             brick-extras-table
version:          0.1.0.0
-- synopsis:
-- description:
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2017 Getty Ritter
-- category:
build-type:       Simple
cabal-version:    >= 1.14

library
  exposed-modules:     Brick.Extras.Table
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.10
                     , brick
                     , vty
                     , array
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
